--- a/web/public/index.html
+++ b/web/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#34CB79" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
-    <title>Web Test</title>
+    <title>Brain</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
